[project]
name = "spiking_rl_lab"
version = "1.0.0"
authors = [
  { name="Kirill Khitushkin", email="khitushkink@mail.ru" },
]
description = "Experimental framework for reinforcement learning with spiking neural network policies, supporting multiple algorithms, configurable training pipelines, and reproducible experimentation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/KirillHit/spiking_rl_lab"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "INP001"
]
