[build-system]
requires = ["hatchling>=1.25", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "spiking_rl_lab"
version = "1.0.0"
authors = [
  { name="Kirill Khitushkin", email="khitushkink@mail.ru" },
]
description = "Experimental framework for reinforcement learning with spiking neural network policies, supporting multiple algorithms, configurable training pipelines, and reproducible experimentation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/KirillHit/spiking_rl_lab"

[project.scripts]
spiking-rl-lab = "spiking_rl_lab.run:main"

# -------------------------
# Hatch build configuration
# -------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/spiking_rl_lab"]
exclude = [
  "**/__pycache__/**",
]

# -------------------------
# Hatch configuration
# -------------------------
[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.envs.base.scripts]
run = "spiking-rl-lab"

[tool.hatch.envs.lint]
extra-dependencies = ["ruff"]

[tool.hatch.envs.lint.scripts]
ruff_check = "ruff check ."
ruff_format = "ruff format --check ."

# -------------------------
# Dependencies from requirements.txt
# -------------------------
[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

# -------------------------
# Formatting / lint
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "INP001",
  "PLC0415",
  "PLR0913",
  "ARG001",
  "ARG002"
]
